Fix compilation issues: ConfigSetAdminRequest inner List class conflict, Utils.java null sentinel, and Min/MaxFieldValue null safety
Co-authored-by: epugh <22395+epugh@users.noreply.github.com>